meow-58 Algorithms to separate executables
* Applications' wide arguments (log level, gpu memory)
* Cleaning up remnants
* Updated documentation
* Currently tile sizes are fixed to 2000x2000)

--- a/algs/calibration-routine/CMakeLists.txt
+++ b/algs/calibration-routine/CMakeLists.txt
@@ -1,33 +1,23 @@
 list(APPEND CALIBRATION_ROUTINE_SOURCES
-        ${CMAKE_CURRENT_LIST_DIR}/src/calibration_routine.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/cli_args.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/execute.cc
+        ${CMAKE_CURRENT_LIST_DIR}/src/main.cc
         )
 
 list(APPEND CALIBRATION_ROUTINE_INCLUDES
         ${CMAKE_CURRENT_LIST_DIR}/include
-        ${CMAKE_CURRENT_LIST_DIR}/../algorithm-bond/include
-        ${CMAKE_CURRENT_LIST_DIR}/../range-doppler-terrain-correction/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../app/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/exotic-operations/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/common/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/cuda/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../util/gdal/include
-        ${CMAKE_CURRENT_LIST_DIR}/../../snap-engine/include
         )
 
+add_executable(alus-cal ${CALIBRATION_ROUTINE_SOURCES})
 
-add_library(calibration-routine-shared
-        SHARED
-        ${CALIBRATION_ROUTINE_SOURCES}
-        )
-
-target_include_directories(calibration-routine-shared
-        PUBLIC
+target_include_directories(alus-cal
+        PRIVATE
         ${CALIBRATION_ROUTINE_INCLUDES}
         )
 
-target_link_libraries(calibration-routine-shared
+target_link_libraries(alus-cal
         PUBLIC
-        alg-bond-static
+        app-util-static
         gdal-util-static
         snap-engine-static
         terrain-correction-static
@@ -37,8 +27,7 @@ target_link_libraries(calibration-routine-shared
         common-util-static
         )
 
-set_target_properties(calibration-routine-shared
+set_target_properties(alus-cal
         PROPERTIES
-        OUTPUT_NAME calibration-routine
-        LIBRARY_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
+        RUNTIME_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
         )
