bulpp-63 Cuda device initialization
* Asynchronous initialization of available devices.
  This also should enable faster boot up for GPU
  on first use.
* Integrated with Sentinel 1 algorithms

--- a/util/cuda/CMakeLists.txt
+++ b/util/cuda/CMakeLists.txt
@@ -1,4 +1,6 @@
 list(APPEND CUDA_UTIL_SOURCES
+        ${CMAKE_CURRENT_LIST_DIR}/src/cuda_device.cu
+        ${CMAKE_CURRENT_LIST_DIR}/src/cuda_device_init.cu
         ${CMAKE_CURRENT_LIST_DIR}/src/cuda_util.cc
         ${CMAKE_CURRENT_LIST_DIR}/src/cuda_util.cu
         )
