bulpp-122 Gabor descriptor computation
Three steps implemented on GPU
*convolution
*mean
*standard deviation

--- a/algs/feature-extraction-gabor/CMakeLists.txt
+++ b/algs/feature-extraction-gabor/CMakeLists.txt
@@ -4,6 +4,8 @@ list(APPEND FEATURE_EXTRACTION_GABOR_SOURCES
         src/filter_bank.cc
         src/patch_assembly.cc
         src/patched_image.cc
+        src/conv_kernel.cu
+        src/patch_reduction.cu
         )
 
 list(APPEND FEATURE_EXTRACTION_GABOR_INCLUDES
