meow-92 Embed merge operation into coherence routine
* AOI improved to work across swaths.
* Contains merge operator bugfixes.

--- a/algs/coherence-estimation-routine/CMakeLists.txt
+++ b/algs/coherence-estimation-routine/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(alus-coh
         gdal-util-static
         snap-engine-static
         topsar-deburst-op-static
+        topsar-merge-static
         terrain-correction-static
         common-util-static
         )
