--- a/algs/coherence-estimation-routine/CMakeLists.txt
+++ b/algs/coherence-estimation-routine/CMakeLists.txt
@@ -9,8 +9,14 @@ list(APPEND COHERENCE_ESTIMATION_ROUTINE_INCLUDES
         )
 
 add_executable(alus-coh ${COHERENCE_ESTIMATION_ROUTINE_SOURCES})
+add_executable(alus-coht ${COHERENCE_ESTIMATION_ROUTINE_SOURCES})
 
 target_include_directories(alus-coh
+        PUBLIC
+        ${COHERENCE_ESTIMATION_ROUTINE_INCLUDES}
+        )
+
+target_include_directories(alus-coht
         PUBLIC
         ${COHERENCE_ESTIMATION_ROUTINE_INCLUDES}
         )
@@ -30,7 +36,30 @@ target_link_libraries(alus-coh
         common-util-static
         )
 
+target_link_libraries(alus-coht
+        PUBLIC
+        app-util-static
+        apply-orbit-file-op-static
+        coregistration-static
+        backgeocoding-static
+        coherence-cuda-static
+        gdal-util-static
+        snap-engine-static
+        topsar-deburst-op-static
+        topsar-merge-static
+        terrain-correction-static
+        common-util-static
+        )
+
+target_compile_definitions(alus-coh PRIVATE COHERENCE_TIMELINE=0)
+target_compile_definitions(alus-coht PRIVATE COHERENCE_TIMELINE=1)
+
 set_target_properties(alus-coh
+        PROPERTIES
+        RUNTIME_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
+        )
+
+set_target_properties(alus-coht
         PROPERTIES
         RUNTIME_OUTPUT_DIRECTORY ${ALUS_BINARY_OUTPUT_DIR}
         )
