--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: CI on AWS GPU instance
 
 # Controls when the workflow will run
 on:
@@ -15,10 +15,26 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: cgialus/alus-ci:latest
+  start-gpu-instance:
+    name: Start GPU Instance
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.ESATEST_INTERNALTESTACCOUNT_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.ESATEST_INTERNALTESTACCOUNT_ACCESS_KEY }}
+        aws-session-token: ${{ secrets.ESATEST_INTERNALTESTACCOUNT_SESSION_TOKEN }}
+        aws-region: eu-central-1
+    - name: Invoke AWS CLI
+      run: |
+        aws s3api list-buckets
+
+  run-ci-process:
+    name: Build and run unit and integration tests
+    runs-on: ubuntu-latest
+    needs: start-gpu-instance
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -27,11 +43,14 @@ jobs:
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
+        run: |
+          echo "Hello, world!"
+          pwd
+          ls -la
 
       # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-          build-automation/run_ci_on_ec2_instance.sh
+#      - name: Run a multi-line script
+#        run: |
+#          echo Add other actions to build,
+#          echo test, and deploy your project.
+#          build-automation/run_ci_on_ec2_instance.sh
