--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,11 +7,13 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [ "actions" ]
+    max-concurrency: 1
   pull_request:
     branches: [ "development" ]
-
+    max-concurrency: 1
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
+    max-concurrency: 1
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
