--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,11 @@ on:
   workflow_dispatch:
     max-concurrency: 1
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+# For 'trigger_instance' - tty=$(readlink /proc/$$/fd/2) - possibly needed in the future, add $tty to tee command.
 jobs:
   start-gpu-instance:
-    name: Start GPU Instance
+    name: Start GPU instance
     runs-on: ubuntu-latest
-
     steps:
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -33,7 +32,7 @@ jobs:
       id: trigger_instance
       run: |
         set -o pipefail
-        output=$($GITHUB_WORKSPACE/build-automation/trigger_ec2_instance.sh | tee)
+        output=$($GITHUB_WORKSPACE/build-automation/trigger_ec2_instance.sh ${{ secrets.ALUS_SID_INSTANCE_ID }} | tee)
         ip_address=$(echo $output | tail -n 1)
         echo "{instance_ip}={$ip_address}" >> $GITHUB_OUTPUT
 
@@ -41,22 +40,27 @@ jobs:
     name: Build and run unit and integration tests
     runs-on: ubuntu-latest
     needs: start-gpu-instance
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+    - uses: actions/checkout@v3
+    - name: CI process
+      id: run-ci-process
+      run: |
+        echo "Instance IP to use is ${{ steps.trigger_instance.outputs.instance_ip}}"
+        pwd
+        ls -la
+    - name: Configure AWS Credentials
+      if: always()
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.SID_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.SID_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.ALUS_SID_INSTANCE_REGION }}
+    - name: Stop GPU instance
+      if: always()
+      run: |
+        $GITHUB_WORKSPACE/build-automation/stop_ec2_instance.sh ${{ secrets.ALUS_SID_INSTANCE_ID }} 
 
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: |
-          echo "Instance IP to use is ${{ steps.trigger_instance.outputs.instance_ip}}"
-          pwd
-          ls -la
 
-      # Runs a set of commands using the runners shell
-#      - name: Run a multi-line script
-#        run: |
-#          echo Add other actions to build,
-#          echo test, and deploy your project.
-#          build-automation/run_ci_on_ec2_instance.sh
+
+
+
